# AoC_2024

./: README.md  pyproject.toml
.github/workflows/: disable_download.yml  download_input.yml
Day_01/: 01_HistorianHisteria_1.py  01_HistorianHisteria_2.py
Day_02/: 02_RedNosedReports_1.py  02_RedNosedReports_2.py
Day_03/: 03_MullItOver_1.py  03_MullItOver_2.py
Day_04/: 04_CeresSearch_1.py  04_CeresSearch_2.py
Day_05/: 05_PrintQueue_1.py  05_PrintQueue_2.py
Day_06/: 06_GuardGallivant_1.py  06_GuardGallivant_2.py
Day_07/: 07_BridgeRepair_1.py  07_BridgeRepair_2.py
Day_08/: 08_ResonantCollinearity_1.py  08_ResonantCollinearity_2.py
Day_09/: 09_DiskFragmenter_1.py  09_DiskFragmenter_2.py
Day_10/: 10_HoofIt_1.py  10_HoofIt_2.py
Day_11/: 11_PlutonianPebbles_1.py  11_PlutonianPebbles_2.py
Day_12/: 12_GardenGroups_1.py  12_GardenGroups_2.py
Day_13/: 13_Claw_Contraption_1.py  13_Claw_Contraption_2.py
Day_14/: 14_RestroomRedoubt_1.py  14_RestroomRedoubt_2.py
Day_25/: 25_CodeChronical_1.py
