[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = ""
authors = ["Chris Bowles <BowlesCR@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
